--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -273,6 +273,17 @@ h3
     &:hover
       :text-decoration underline
 
+  table.teams
+    td, th
+      :white-space nowrap
+      :width 20%
+
+    .person
+      :width 0%
+      
+    .ranking
+      :padding-left 20px
+
   #graph
     :margin-top 1em
 
@@ -281,15 +292,16 @@ h3
 
   .person
     .mugshot
+      :text-align center
       :padding-bottom 1em
       
     p.position
       :padding 0
       :padding-top 10px
       :padding-bottom 4px
-      :margin-bottom 1em
-      :border-top 1px solid #EEEEEE
-      :border-bottom 1px solid #EEEEEE
+      :margin-bottom 15px
+      :border-top 1px solid #999999
+      :border-bottom 1px solid #999999
       :font-size 250%
       :font-weight bold
       :text-align center
