--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -1,10 +1,10 @@
 - title 'Teams'[]
 
 - cache(teams_path) do
-  %table.list
+  %table.list.teams
     %tr
-      %th= 'Members'[]
-      %th= 'Total ranking'[]
+      %th{ :colspan => 4 }= 'Members'[]
+      %th.ranking= 'Total ranking'[]
       %th= 'Games won'[]
       %th= 'Games played'[]
       %th= 'Winning percentage'[]
@@ -12,10 +12,12 @@
 
     - @teams.each do |team|
       %tr{ :class => cycle('odd', 'even') }
-        %td
+        %td.person
           = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => team[:team_ids])
-          = team[:players].collect { |p| person_link_full(p) }.join(' - ')
-        %td= team[:total_ranking]
+        %td.person= person_link_full(team[:players].first)
+        %td.person -
+        %td.person= person_link_full(team[:players].last)
+        %td.ranking= team[:total_ranking]
         %td= team[:games_won]
         %td= team[:games_played]
         %td= team[:percentage].to_s + '%'
