--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -209,19 +209,27 @@ h3 {
     text-decoration: none; }
     #bd a.person:hover, #bd a.game:hover {
       text-decoration: underline; }
+  #bd table.teams td, #bd table.teams th {
+    white-space: nowrap;
+    width: 20%; }
+  #bd table.teams .person {
+    width: 0%; }
+  #bd table.teams .ranking {
+    padding-left: 20px; }
   #bd #graph {
     margin-top: 1em; }
     #bd #graph #chart {
       margin-bottom: 20px; }
   #bd .person .mugshot {
+    text-align: center;
     padding-bottom: 1em; }
   #bd .person p.position {
     padding: 0;
     padding-top: 10px;
     padding-bottom: 4px;
-    margin-bottom: 1em;
-    border-top: 1px solid #EEEEEE;
-    border-bottom: 1px solid #EEEEEE;
+    margin-bottom: 15px;
+    border-top: 1px solid #999999;
+    border-bottom: 1px solid #999999;
     font-size: 250%;
     font-weight: bold;
     text-align: center; }
