git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@252 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -12,11 +12,12 @@
 
     - @teams.each do |team|
       %tr{ :class => cycle('odd', 'even') }
-        %td.person
-          = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => team[:team_ids])
         %td.person= person_link_full(team[:players].first)
         %td.person -
         %td.person= person_link_full(team[:players].last)
+        %td.person
+          = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => team[:team_ids])
+          = link_to image_tag('icons/chart_bar.png', :class => 'team'), team_path(team[:team_ids])
         %td.ranking= team[:total_ranking]
         %td= team[:games_won]
         %td= team[:games_played]
