--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,10 @@
     %link{ :rel => 'stylesheet', :href => 'http://yui.yahooapis.com/2.3.1/build/base/base-min.css', :type => 'text/css' }
     = stylesheet_link_tag 'screen'
     = stylesheet_link_tag 'print', :media => 'print'
-    = javascript_include_tag :all, :cache => true
+    = javascript_include_tag 'jquery'
+    = javascript_include_tag 'swfobject'
+    = javascript_include_tag 'less_routes'
+    = javascript_include_tag 'application'
     = yield :head
 
   %body
