--- a/app/views/shared/_login.haml
+++ b/app/views/shared/_login.haml
@@ -4,4 +4,11 @@
     = link_to 'Logout', logout_path
 - else
   #user
-    = link_to 'Login', login_path
+    = link_to 'Login', login_path, :id => 'login_link'
+    
+  - form_tag sessions_path, :id => 'login_form' do
+    = 'Username'[]
+    = text_field_tag 'login', nil, :class => 'login'
+    = 'Password'[]
+    = password_field_tag 'password', nil, :class => 'password'
+    = submit_tag 'Go'[], :disable_with => 'Signing in'[] + '&hellip;', :class => 'submit'
