--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -81,7 +81,19 @@ table
       a
         :background-image url('../images/tab_active_left.gif')
         :color #7C7C7C
+
+  #login_form
+    :display none
+    :font-size 85%
+
+    input
+      :margin-right 10px
+      :width 80px
       
+    .submit
+      :width 4em
+      :margin-right 0
+
 h2#page_title
   :display none
   :margin 0
