git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@255 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -41,6 +41,7 @@
           %td.against
             %label= 'Worst ranking'[] + ':'
             = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
-            
-      %p
-        = link_to 'Edit'[], edit_person_path(@person)
+
+      - admin_area do
+        %p
+          = link_to 'Edit'[], edit_person_path(@person)
