--- a/app/views/dashboard/index.iphone.haml
+++ b/app/views/dashboard/index.iphone.haml
@@ -6,7 +6,7 @@
     %th= 'Person'[]
     %th= 'Ranking'[]
 
-  - @people.each_with_index do |person, index|
+  - (@rankings + @newbies).each_with_index do |person, index|
     %tr{ :class => cycle('odd', 'even') }
       %td= index + 1
       %td= person.full_name
