--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -12,10 +12,10 @@
 
     - @teams.each do |team|
       %tr{ :class => cycle('odd', 'even') }
-        %td.person= person_link_full(team[:players].first)
+        %td.person{ :nowrap => 'nowrap' }= person_link_full(team[:players].first)
         %td.person -
-        %td.person= person_link_full(team[:players].last)
-        %td.person
+        %td.person{ :nowrap => 'nowrap' }= person_link_full(team[:players].last)
+        %td.person{ :nowrap => 'nowrap' }
           = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => team[:team_ids])
           = link_to image_tag('icons/chart_bar.png', :class => 'team'), team_path(team[:team_ids])
         %td.ranking= team[:total_ranking]
