git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@269 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/shared/_login.haml
+++ b/app/views/shared/_login.haml
@@ -11,4 +11,6 @@
     = text_field_tag 'login', nil, :class => 'login'
     = 'Password'[]
     = password_field_tag 'password', nil, :class => 'password'
+    = 'Remember?'[]
+    = check_box_tag 'remember_me', nil, nil, :class => 'remember'
     = submit_tag 'Go'[], :disable_with => 'Signing in'[] + '&hellip;', :class => 'submit'
