--- a/app/views/shared/_login.haml
+++ b/app/views/shared/_login.haml
@@ -13,4 +13,4 @@
     = password_field_tag 'password', nil, :class => 'password'
     = 'Remember?'[]
     = check_box_tag 'remember_me', nil, nil, :class => 'remember'
-    = submit_tag 'Go'[], :disable_with => 'Signing in'[] + '&hellip;', :class => 'submit'
+    = submit_tag 'Sign in'[], :disable_with => 'Signing in'[] + '&hellip;', :class => 'submit'
