git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@276 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,6 +40,7 @@
                 #messages
                   - flash.keys.each do |key|
                     %div{ :class => 'key', :id => "flash_#{key}" }= flash[key]
+                = javascript_tag "$('#messages').pause(8000).Fade();"
 
               = yield
   
