--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -275,11 +275,11 @@ h3
       :position relative
       :top 3px
 
-  tr.person
+  tr.user
     .admin
       :display inline
 
-  a.person, a.game
+  a.user, a.game
     :color #000000
     :text-decoration none
 
@@ -290,7 +290,7 @@ h3
     td, th
       :width 20%
 
-    .person
+    .user
       :width 0%
       :white-space nowrap
       
@@ -303,7 +303,7 @@ h3
     #chart
       :margin-bottom 20px
 
-  .person
+  .user
     .mugshot
       :text-align center
       :padding-bottom 1em
