--- a/app/views/dashboard/index.iphone.haml
+++ b/app/views/dashboard/index.iphone.haml
@@ -6,9 +6,9 @@
     %th= 'Person'[]
     %th= 'Ranking'[]
 
-  - (@rankings + @newbies).each_with_index do |person, index|
+  - (@rankings + @newbies).each_with_index do |user, index|
     %tr{ :class => cycle('odd', 'even') }
       %td= index + 1
-      %td= person.full_name
-      %td= person.ranking
+      %td= user.name
+      %td= user.ranking
   - reset_cycle
