--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,4 +1,4 @@
-- title 'Ranking chart for {first_name} and {second_name}'[:ranking_chart_for, @people.first.full_name, @people.last.full_name]
+- title 'Ranking chart for {first_name} and {second_name}'[:ranking_chart_for, @people.first.name, @people.last.name]
 
-%h3= 'Ranking chart for {first_name} and {second_name}'[:ranking_chart_for, @people.first.full_name, @people.last.full_name]
+%h3= 'Ranking chart for {first_name} and {second_name}'[:ranking_chart_for, @people.first.name, @people.last.name]
 #graph= graph(formatted_team_url(params[:id], :graph))
