--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -1,6 +1,6 @@
 = error_messages_for :user
 
-- form_for @user do |f|
+- form_for @user, :html => { :multipart => true } do |f|
   = render :partial => 'form', :locals => { :f => f }
     
   %p
