--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -1,8 +1,8 @@
 = error_messages_for :user
 
-- form_for @user do |f|
+- form_for @user, :html => { :multipart => true } do |f|
   = render :partial => 'form', :locals => { :f => f }
     
   %p
-    = submit_tag 'Sign in'[], :disable_with => 'Signing in'[] + '&hellip;'
+    = submit_tag 'Sign up'[], :disable_with => 'Signing up'[] + '&hellip;'
     = link_to 'Login'[], login_url
