--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -268,6 +268,20 @@ h3
       label
         :font-weight bold
 
+    #opponents
+      .odd
+        :background-color #F0F0F0
+      
+      .even
+        :background-color #F9F9F9
+
+      .opponent
+        :padding 5px
+    
+        label
+          :display inline
+          :font-weight bold
+
   a.rss
     :text-decoration none
 
