--- a/app/views/dashboard/_recent_games.html.haml
+++ b/app/views/dashboard/_recent_games.html.haml
@@ -3,6 +3,7 @@
     %th.name= 'Team one'[]
     %th.score= 'Score'[]
     %th.name= 'Team two'[]
+    %th &nbsp;
 
   - recent_games.each do |game|
     %tr{ :class => cycle('odd', 'even') }
