--- a/app/views/games/_game_columns.html.haml
+++ b/app/views/games/_game_columns.html.haml
@@ -17,3 +17,6 @@
 %td.members
   = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.last.team_ids)
   = render :partial => 'games/members', :locals => { :team => game.teams.last }
+  
+%td.comments
+  = link_to image_tag('icons/comments.png', :class => 'comments', :alt => 'Comment on this game'[]) + " (#{game.comments_count})", game_path(game)
