--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -202,11 +202,20 @@ h3
         .user
           :font-weight bold
           
+      .edit
+        :margin-bottom 1em
+        
+      textarea
+        :height 5em
+          
     #new_comment
       :margin-top 1em
       
       textarea
         :height 6em
+    
+  .edit_comment
+    :margin-bottom 1em
 
   .filter
     a.clear
